--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "crypto": "^1.0.1",
+    "element-ui": "^2.4.1",
     "lodash": "^4.17.10",
     "mithril": "^1.1.6",
     "moment": "^2.22.2",
@@ -23,6 +24,8 @@
     "@vue/cli-plugin-babel": "^3.0.0-beta.15",
     "@vue/cli-plugin-eslint": "^3.0.0-beta.15",
     "@vue/cli-service": "^3.0.0-beta.15",
+    "less": "^3.0.4",
+    "less-loader": "^4.1.0",
     "vue-template-compiler": "^2.5.16"
   },
   "eslintConfig": {
